fix: erreurs generiques, exemples swagger et cors